fix(BlipSelect,Common.scss, Weblink): align titles to the left

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -363,6 +363,11 @@
     text-align: center;
   }
 
+  .text-left {
+    text-align: left;
+  }
+
+
   .dashed-border {
     border: 1px dashed $vue-time;
   }
